# remedy-scribe

./: .gitignore  LICENSE  README.md  pyproject.toml  remedy_scribe_webapp.py  start_remedy_scribe.sh  start_remedy_scribe_simple.sh  test_transcription.html
